[package]
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
name = "rustc-internal-docs"
version = "0.1.0"

[[bin]]
doc = false
name = "rustc-internal-docs"
path = "src/bin/main.rs"

[dependencies]
chrono = "0.4.0"
clap = "2.26.0"
env_logger = "0.4.3"
error-chain = "0.11.0"
log = "0.3.8"
regex = "0.2.2"
serde = "1.0.14"
serde_derive = "1.0.14"
toml = "0.4.5"
tempdir = "0.3.5"
